--- a/program.html
+++ b/program.html
@@ -41,6 +41,112 @@
       a:active {color:red;} /* 鼠标点击时 */
   </style>
 
+<script type="text/javascript">
+  //屏蔽右键菜单
+  document.oncontextmenu = function (event){
+      if(window.event){
+          event = window.event;
+      }try{
+          var the = event.srcElement;
+          if (!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")){
+              return false;
+          }
+          return true;
+      }catch (e){
+          return false; 
+      } 
+  }
+  
+  //屏蔽粘贴
+  document.onpaste = function (event){
+      if(window.event){
+          event = window.event;
+      }try{
+          var the = event.srcElement;
+          if (!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")){
+              return false;
+          }
+          return true;
+      }catch (e){
+          return false;
+      }
+  }
+  
+  // 屏蔽复制
+  // document.oncopy = function (event){
+  //     if(window.event){
+  //         event = window.event;
+  //     }try{
+  //         var the = event.srcElement;
+  //         if(!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")){
+  //             return false;
+  //         }
+  //         return true;
+  //     }catch (e){
+  //         return false;
+  //     }
+  // }
+  
+  // 屏蔽剪切
+  document.oncut = function (event){
+      if(window.event){
+          event = window.event;
+      }try{
+          var the = event.srcElement;
+          if(!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")){
+              return false;
+          }
+          return true;
+      }catch (e){
+          return false;
+      }
+  }
+
+  //屏蔽保存
+  window.addEventListener("keydown", function (e) {
+      if (e.keyCode == 83 && (navigator.platform.match("Mac") ? e.metaKey : e.ctrlKey)) {
+          e.preventDefault();
+      }
+  }, false);
+  
+  // 屏蔽选中
+  // document.onselectstart = function (event){
+  //     if(window.event){
+  //         event = window.event;
+  //     }try{
+  //         var the = event.srcElement;
+  //         if (!((the.tagName == "INPUT" && the.type.toLowerCase() == "text") || the.tagName == "TEXTAREA")){
+  //             return false;
+  //         }
+  //         return true;
+  //     } catch (e) {
+  //         return false;
+  //     }
+  // }
+
+  // 屏蔽F12
+  document.onkeydown = document.onkeyup = document.onkeypress = function(event) {
+      var e = event || window.event || arguments.callee.caller.arguments[0];
+      if (e && e.keyCode == 123) {
+          e.returnValue = false;
+          return (false);
+      }
+  }
+
+  // 防浏览器内嵌控制台
+  function resize(){
+      var threshold = 200;
+      var widthThreshold = window.outerWidth - window.innerWidth > threshold;
+      var heightThreshold = window.outerHeight - window.innerHeight > threshold;
+      if(widthThreshold || heightThreshold){
+         location.replace("https://pagewarn.netlify.app/",'_blank')
+      }
+  }
+  window.addEventListener('resize', resize);
+  resize()
+
+</script>
+
 </head>
 <body>
 
