--- a/program.html
+++ b/program.html
@@ -160,7 +160,7 @@
     <p>
       活动Q群：
       <br>
-      &emsp;<a class="aa" href="https://jq.qq.com/?_wv=1027&k=RRBcLZKs" target="_blank">735650876</a>
+      &emsp;<b><a class="aa" href="https://jq.qq.com/?_wv=1027&k=RRBcLZKs" target="_blank">735650876</a></b>
     </p>
     <p>
       使用方法：
